Make profile error dialog checkbox opt-in and improve feedback description

1) Change the profile error dialog checkbox to report a feedback when the
   dialog is dismissed to be opt-in instead of opt-out.
2) Change the scary message "DO NOT CHANGE BELOW THIS LINE" to "Please do
   not change below this line".
3) Only show the above message if we actually have some diagnostics data
   to add to the report.

Screenshots: https://bugs.chromium.org/p/chromium/issues/detail?id=708505#c4

BUG=708505
TEST=On Chrome OS, run 'stop ui', trigger a profile error by
'echo "<some long random text>" > /home/chronos/Default/History'. Run 'start ui'.
Make sure the checkbox is opt in in the error dialog, check the box, and click OK,
the feedback is pre-populated with a message like the one in the screenshots.

Review-Url: https://codereview.chromium.org/2896133002
Cr-Commit-Position: refs/heads/master@{#473813}

Former-commit-id: e4d990302ab30a05aada8e4928e3ec19a02222a7